Fixing layout issues in non svh supported browsers by adding vh unit

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,3 +136,19 @@ html.lenis {
 .cta:active {
   transform: scale(0.95);
 }
+
+
+.dynamicHeight {
+  height: 100vh;
+  height: 100svh;
+}
+
+.dynamicLoaderHeight {
+  height: 50vh;
+  height: 50svh;
+}
+
+.dynamicMaxMenuHeight {
+  max-height:100vh;
+  max-height:100svh;
+}
